--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,50 @@
 /*  your css code here. If applicable */
+body{
+	margin:0;
+	padding:0;
+	background-color : #f5f5f5;
+}
+.header{
+	text-align:center;
+	background-color: #011e29;
+	padding:20px;
+	color:white;
+}
+.container{
+	display:flex;
+	gap:10px;
+	
+}
+
+
+.latest-news-section{
+	background-color:white;
+	width:200px;
+	height:130px;
+	text-align:center;
+	border-radius:8px;
+	margin-left:10px;
+}
+
+.main{
+	padding:10px;
+	text-align:center;
+	width:290px;
+	background-color:white;
+	border-radius:8px;
+	height:200px;
+}
+
+.pictorial-news-section{
+	text-align:center;
+	background-color:white;
+	border-radius:8px;
+	width:220px;
+	padding:10px;
+	margin-right:10px;
+}
+
+.container .pictorial-news-section img{
+	width:150px;
+	
+}
